Refactor Wispr extension: removed local Whisper support, updated README for clarity, and streamlined command registration. The extension now exclusively uses OpenAI's Whisper API for transcription, enhancing user experience and simplifying setup.

--- a/package.json
+++ b/package.json
@@ -39,41 +39,6 @@
         "command": "wispr.toggleRecording",
         "title": "Toggle Voice Recording",
         "icon": "$(mic)"
-      },
-      {
-        "command": "wispr.startRecording",
-        "title": "Start Voice Recording",
-        "icon": "$(mic)"
-      },
-      {
-        "command": "wispr.stopRecording",
-        "title": "Stop Voice Recording",
-        "icon": "$(stop-circle)"
-      },
-      {
-        "command": "wispr.resetPermissionDialog",
-        "title": "Reset Microphone Permission Dialog",
-        "icon": "$(gear)"
-      },
-      {
-        "command": "wispr.togglePermissionDialog",
-        "title": "Toggle Microphone Permission Dialog",
-        "icon": "$(settings-gear)"
-      },
-      {
-        "command": "wispr.toggleAutoCopyClipboard",
-        "title": "Toggle Auto-Copy to Clipboard",
-        "icon": "$(clippy)"
-      },
-      {
-        "command": "wispr.toggleTranscriptionMode",
-        "title": "Toggle Transcription Mode (API/Local)",
-        "icon": "$(globe)"
-      },
-      {
-        "command": "wispr.installLocalWhisper",
-        "title": "Install Local Whisper Dependencies",
-        "icon": "$(cloud-download)"
       }
     ],
     "configuration": {
@@ -89,57 +54,6 @@
           "type": "string",
           "default": "en",
           "description": "Language for transcription (e.g., 'en', 'es', 'fr', 'de', 'it', 'pt', 'ru', 'ja', 'ko', 'zh')",
-          "scope": "application"
-        },
-        "wispr.model": {
-          "type": "string",
-          "default": "whisper-1",
-          "description": "Whisper model to use for transcription",
-          "enum": [
-            "whisper-1"
-          ],
-          "scope": "application"
-        },
-        "wispr.skipPermissionDialog": {
-          "type": "boolean",
-          "default": false,
-          "description": "Skip microphone permission dialog after granting once (macOS only)",
-          "scope": "application"
-        },
-        "wispr.autoCopyToClipboard": {
-          "type": "boolean",
-          "default": true,
-          "description": "Automatically copy transcribed text to clipboard",
-          "scope": "application"
-        },
-        "wispr.transcriptionMode": {
-          "type": "string",
-          "default": "api",
-          "description": "Transcription mode: 'api' for OpenAI API or 'local' for local Whisper model",
-          "enum": [
-            "api",
-            "local"
-          ],
-          "scope": "application"
-        },
-        "wispr.localWhisperModel": {
-          "type": "string",
-          "default": "base",
-          "description": "Local Whisper model size (tiny, base, small, medium, large, turbo)",
-          "enum": [
-            "tiny",
-            "base", 
-            "small",
-            "medium",
-            "large",
-            "turbo"
-          ],
-          "scope": "application"
-        },
-        "wispr.pythonPath": {
-          "type": "string",
-          "default": "python3",
-          "description": "Path to Python executable for local Whisper (e.g., 'python3', '/usr/bin/python3', or path to conda environment)",
           "scope": "application"
         }
       }
@@ -170,8 +84,6 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "mic": "^2.1.2",
-    "openai": "^4.24.0",
-    "wav": "^1.0.2"
+    "openai": "^4.24.0"
   }
 }
